--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ## --- AL gitignore ---
-## Ignores generated binary files and 
+## Ignores generated binary files and
 ## temporary files from Visual Studio and Visual Studio code
 
 # Binary files
@@ -8,11 +8,9 @@
 
 # Temp files
 .vs/
-.vscode/
+.vscode/rad.json
 
 # Others
-.vscode/
-**/launch.json
 ~$*
 *~
 *.zip
