--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "id": "de18e96f-d26a-43e1-9a11-c042dfc875c2",
   "name": "BCCalendarJsDemo",
   "publisher": "Dave Sinclair (drs76)",
-  "version": "23.0.0.2",
+  "version": "23.1.0.0",
   "brief": "",
-  "description": "BC Calendar.js Demo",
+  "description": "BC CalendarJs.js Demo",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
@@ -17,7 +17,7 @@
   "idRanges": [
     {
       "from": 50200,
-      "to": 50249
+      "to": 50215
     }
   ],
   "resourceExposurePolicy": { "allowDebugging": true },
